# configtool

./: pyproject.toml  setup.py  url.sh
configtool/: __init__.py  configtool.py
