[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "configtool"
version = "0.0.1761033984"
description = "Short explination of what it does _here_"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/configtool"

[project.scripts]
configtool = "configtool.configtool:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
configtool = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = []
dependencies-git = ["asserttool @ git+https://github.com/jakeogh/asserttool", "click-auto-help @ git+https://github.com/jakeogh/click-auto-help", "clicktool @ git+https://github.com/jakeogh/clicktool", "globalverbose @ git+https://github.com/jakeogh/globalverbose", "retry-on-exception @ git+https://github.com/jakeogh/retry-on-exception", "timetool @ git+https://github.com/jakeogh/timetool"]
index-urls = ["jakeogh.github.io", "pip-index"]
